--- a/guide/package.json
+++ b/guide/package.json
@@ -5,8 +5,8 @@
   "homepage": "htpps://DARPZZ.github.io/Guide/",
   "type": "module",
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
     "react-router-hash-link": "^2.4.3"
