--- a/guide/package.json
+++ b/guide/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^6.24.0",
     "react-router-hash-link": "^2.4.3"
   },
